[gd_scene load_steps=9 format=2]

[ext_resource path="res://enemy/hitscan/EnemyHitscan.gd" type="Script" id=1]
[ext_resource path="res://electricmage.tscn" type="PackedScene" id=2]
[ext_resource path="res://enemy/hitscan/lightning.png" type="Texture" id=3]

[sub_resource type="CylinderShape" id=1]
radius = 0.2
height = 1.7

[sub_resource type="Shader" id=2]
code = "shader_type spatial;
render_mode blend_mix,depth_draw_opaque,cull_disabled,diffuse_burley,specular_schlick_ggx,unshaded;
uniform vec4 albedo : hint_color;
uniform sampler2D texture_albedo : hint_albedo;
uniform float specular;
uniform float metallic;
uniform float roughness : hint_range(0,1);
uniform float point_size : hint_range(0,128);
uniform vec3 uv1_scale;
uniform vec3 uv1_offset;
uniform vec3 uv2_scale;
uniform vec3 uv2_offset;


float hash(float p) {
  return fract(sin(p) * 4791.9511);
}
void vertex() {
	UV=UV*uv1_scale.xy+uv1_offset.xy;
	UV.x=UV.x + hash(TIME);
//	UV=hash(UV*TIME);
//	UV=UV+vec2(sin(TIME * 20.0) * cos(TIME * 10.0), 0.0);
}



void fragment() {
	vec2 base_uv = UV;
	vec4 albedo_tex = texture(texture_albedo,base_uv);
	ALBEDO = albedo.rgb * albedo_tex.rgb;
	METALLIC = metallic;
	ROUGHNESS = roughness;
	SPECULAR = specular;
	ALPHA = albedo.a * albedo_tex.a;
}
"

[sub_resource type="ShaderMaterial" id=3]
shader = SubResource( 2 )
shader_param/albedo = Color( 1, 1, 1, 1 )
shader_param/specular = 0.5
shader_param/metallic = 0.0
shader_param/roughness = 1.0
shader_param/point_size = 1.0
shader_param/uv1_scale = Vector3( 16, 0.5, 0 )
shader_param/uv1_offset = Vector3( 0, 1.15, 0 )
shader_param/uv2_scale = Vector3( 1, 1, 1 )
shader_param/uv2_offset = Vector3( 0, 0, 0 )
shader_param/texture_albedo = ExtResource( 3 )

[sub_resource type="QuadMesh" id=4]
material = SubResource( 3 )
size = Vector2( 32, 1 )

[sub_resource type="Animation" id=5]
resource_name = "Attack"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("LookGroup/Spatial:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}

[node name="EnemyHitscan" type="KinematicBody"]
collision_layer = 4
collision_mask = 5
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.85, 0 )
shape = SubResource( 1 )

[node name="electricmage" parent="." instance=ExtResource( 2 )]

[node name="SeekDuration" type="Timer" parent="."]
one_shot = true

[node name="LookGroup" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0 )

[node name="RayCast" type="RayCast" parent="LookGroup"]
enabled = true
cast_to = Vector3( 0, 0, -32 )
collision_mask = 2

[node name="Spatial" type="Spatial" parent="LookGroup"]
visible = false

[node name="MeshInstance" type="MeshInstance" parent="LookGroup/Spatial"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0, -16 )
mesh = SubResource( 4 )
material/0 = null

[node name="MeshInstance2" type="MeshInstance" parent="LookGroup/Spatial"]
transform = Transform( 1.91069e-15, -1, 4.37114e-08, -4.37114e-08, -4.37114e-08, -1, 1, 0, -4.37114e-08, 0, 0, -16 )
mesh = SubResource( 4 )
material/0 = null

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Attack = SubResource( 5 )

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
attenuation_model = 2
unit_db = 60.0

[connection signal="timeout" from="SeekDuration" to="." method="_on_Cooldown_timeout"]
